fixed a bug on safari

--- a/components/general/MailChimp.module.css
+++ b/components/general/MailChimp.module.css
@@ -185,4 +185,7 @@
     min-height: 140px;
     max-height: 140px;
   }
+  .ImageContainer img {
+    object-fit: cover;
+  }
 }
