--- a/components/general/SearchResultElements/addToBasket/AddToBasket.module.css
+++ b/components/general/SearchResultElements/addToBasket/AddToBasket.module.css
@@ -1,23 +1,19 @@
-.container {
-
-}
-
 .addToCartBtn {
-    transition: all 300ms;
+  transition: all 300ms;
 
-    background-color: #ff6b00;
-    color: #fff;
-    border: none;
-    font-size: 14px;
-    padding: 8px 8px;
+  background-color: #ff6b00;
+  color: #fff;
+  border: none;
+  font-size: 14px;
+  padding: 8px 8px;
 
-    width: 100%;
+  width: 100%;
 
-    border-radius: 5px;
+  border-radius: 5px;
 }
 
 .addToCartBtn:hover {
-    transition: all 300ms;
+  transition: all 300ms;
 
-    background-color: #d95700;
+  background-color: #d95700;
 }
